# glib-prebuilts

./: CMakeLists.txt
include/glib/: glibconfig.h
src/: glib_test.cpp
